# vela

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
src/: app.rs  main.rs
src/config/: profiles.rs
src/connection/: sftp.rs
src/transfer/: queue.rs
src/ui/: dialogs.rs  mod.rs  panels.rs  statusbar.rs  theme.rs
