[package]
name = "vela"
version = "0.5.1"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
ratatui = "0.29"
crossterm = "0.28"
ssh2 = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
similar = "2"
thiserror = "2"
notify = "6"
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
zeroize = { version = "1", features = ["derive"] }
tempfile = "3"
shell-words = "1"
unicode-normalization = "0.1"
